--- a/.devcontainer/acme-container/devcontainer.json
+++ b/.devcontainer/acme-container/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Existing Docker Compose",
+  "name": "ACME",
   "dockerComposeFile": ["../../docker-compose.yml"],
   "service": "acme",
   "workspaceFolder": "/rails",
