update amce workdir

--- a/.devcontainer/acme-container/devcontainer.json
+++ b/.devcontainer/acme-container/devcontainer.json
@@ -2,7 +2,7 @@
   "name": "ACME",
   "dockerComposeFile": ["../../docker-compose.yml"],
   "service": "acme",
-  "workspaceFolder": "/rails",
+  "workspaceFolder": "/acme",
   "shutdownAction":"none",
   "customizations": {
 		"vscode": {
