--- a/.devcontainer/icmib-container/devcontainer.json
+++ b/.devcontainer/icmib-container/devcontainer.json
@@ -8,7 +8,9 @@
 		"vscode": {
 			"extensions": [
         "rubocop.vscode-rubocop",
-        "Shopify.ruby-lsp"
+        "Shopify.ruby-lsp",
+        "Shopify.ruby-extensions-pack",
+        "eamodio.gitlens"
       ]
 		}
 	}
