--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     restart: unless-stopped
     ports:
       - "5432:5432"
+    command: postgres -c max_connections=200
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -223,7 +224,6 @@ services:
       - MONGODB_PASSWORD=root
       - MONGODB_URL=mongo:27017
       - RAILS_ENV=development
-      - RAILS_MAX_THREADS=1
     tty: true
     stdin_open: true
 
@@ -250,7 +250,6 @@ services:
       - MONGODB_PASSWORD=root
       - MONGODB_URL=mongo:27017
       - RAILS_ENV=development
-      - RAILS_MAX_THREADS=1
     tty: true
     stdin_open: true
 
