Adding docker extension to container, passing user

--- a/.devcontainer/acme-container/devcontainer.json
+++ b/.devcontainer/acme-container/devcontainer.json
@@ -4,14 +4,20 @@
   "service": "acme",
   "workspaceFolder": "/acme",
   "shutdownAction":"none",
+  "containerEnv": {
+    "USER": "${localEnv:USER}"
+  },
+"runArgs": ["--init"],
+"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
   "customizations": {
-		"vscode": {
-			"extensions": [
+    "vscode": {
+      "extensions": [
         "rubocop.vscode-rubocop",
         "Shopify.ruby-lsp",
         "Shopify.ruby-extensions-pack",
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "ms-azuretools.vscode-docker"
       ]
-		}
-	}
+    }
+  }
 }
