--- a/.devcontainer/feedback-container/devcontainer.json
+++ b/.devcontainer/feedback-container/devcontainer.json
@@ -4,10 +4,16 @@
   "service": "feedback",
   "workspaceFolder": "/feedback",
   "shutdownAction":"none",
+  "containerEnv": {
+    "USER": "${localEnv:USER}"
+  },
+"runArgs": ["--init"],
+"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
   "customizations": {
 		"vscode": {
 			"extensions": [
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "ms-azuretools.vscode-docker"
       ]
 		}
 	}
