Adding tailwindcss extension for acme

--- a/.devcontainer/acme-container/devcontainer.json
+++ b/.devcontainer/acme-container/devcontainer.json
@@ -16,7 +16,8 @@
         "Shopify.ruby-lsp",
         "Shopify.ruby-extensions-pack",
         "eamodio.gitlens",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "bradlc.vscode-tailwindcss"
       ]
     }
   }
