--- a/.devcontainer/icmu-container/devcontainer.json
+++ b/.devcontainer/icmu-container/devcontainer.json
@@ -13,7 +13,8 @@
 		"vscode": {
 			"extensions": [
         "eamodio.gitlens",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "JakeBecker.elixir-ls"
       ]
 		}
 	}
