--- a/.devcontainer/icmib-container/devcontainer.json
+++ b/.devcontainer/icmib-container/devcontainer.json
@@ -8,6 +8,7 @@
     "USER": "${localEnv:USER}"
   },
 "runArgs": ["--init"],
+"postStartCommand": "docker-entrypoint/run-rails.sh",
 "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
   "customizations": {
 		"vscode": {
