add todo-tree to out container plugins
this is a nice little plugin that puts all the TODO comments into a nice easy format

--- a/.devcontainer/acme-container/devcontainer.json
+++ b/.devcontainer/acme-container/devcontainer.json
@@ -17,7 +17,8 @@
         "Shopify.ruby-extensions-pack",
         "eamodio.gitlens",
         "ms-azuretools.vscode-docker",
-        "bradlc.vscode-tailwindcss"
+        "bradlc.vscode-tailwindcss",
+        "Gruntfuggly.todo-tree"
       ]
     }
   }
