--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -256,6 +256,8 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    environment:
+      - OLLAMA_HOST=0.0.0.0
     ports:
       - "11434:11434"
     volumes:
