--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mongo:
     init: true
@@ -262,3 +264,5 @@ services:
       - "11434:11434"
     volumes:
       - ~/projects/ollama:/root/.ollama
+    profiles:
+      - ollama-mamma
