adding copilot extension to the containers

--- a/.devcontainer/icmu-container/devcontainer.json
+++ b/.devcontainer/icmu-container/devcontainer.json
@@ -15,7 +15,9 @@
         "eamodio.gitlens",
         "ms-azuretools.vscode-docker",
         "JakeBecker.elixir-ls",
-        "Gruntfuggly.todo-tree"
+        "Gruntfuggly.todo-tree",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
       ]
 		}
 	}
