--- a/.devcontainer/icmib-container/devcontainer.json
+++ b/.devcontainer/icmib-container/devcontainer.json
@@ -17,7 +17,9 @@
         "Shopify.ruby-extensions-pack",
         "eamodio.gitlens",
         "ms-azuretools.vscode-docker",
-        "Gruntfuggly.todo-tree"
+        "Gruntfuggly.todo-tree",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
       ]
 		}
 	}
