--- a/.devcontainer/qual-connect-container/devcontainer.json
+++ b/.devcontainer/qual-connect-container/devcontainer.json
@@ -18,7 +18,9 @@
         "eamodio.gitlens",
         "ms-azuretools.vscode-docker",
         "bradlc.vscode-tailwindcss",
-        "Gruntfuggly.todo-tree"
+        "Gruntfuggly.todo-tree",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
       ]
     }
   }
