--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongo:
     init: true
@@ -30,7 +28,7 @@ services:
 
   postgres:
     init: true
-    image: postgres:16.4
+    image: pgvector/pgvector:pg16
     container_name: icmib-postgres
     restart: unless-stopped
     ports:
