--- a/.devcontainer/feedback-container/devcontainer.json
+++ b/.devcontainer/feedback-container/devcontainer.json
@@ -13,7 +13,9 @@
 		"vscode": {
 			"extensions": [
         "eamodio.gitlens",
-        "ms-azuretools.vscode-docker".
+        "ms-azuretools.vscode-docker",
+        "JakeBecker.elixir-ls",
+        "Gruntfuggly.todo-tree",
         "GitHub.copilot",
         "GitHub.copilot-chat"
       ]
